objects/ssot__BillingScheduleGroup__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__BillDayOfMonth__c</fullName>
        <label>Bill Day Of Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__BillToContactId__c</fullName>
        <label>BillToContact</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BillingAccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BillingAddressText__c</fullName>
        <label>Billing Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BillingMethod__c</fullName>
        <label>Billing Method</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BillingResumptionDate__c</fullName>
        <label>Billing Resumption Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__BillingScheduleGroupBillingType__c</fullName>
        <label>Billing Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BillingStartMonth__c</fullName>
        <label>Billing Start Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BillingSuspensionDate__c</fullName>
        <label>Billing Suspension Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__BillingTermNumber__c</fullName>
        <label>Billing Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__BillingTermUnit__c</fullName>
        <label>Billing Term Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BillingTreatmentId__c</fullName>
        <label>Billing Treatment</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BindingInstanceObjectId__c</fullName>
        <label>Binding Instance Object Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BindingInstanceObject__c</fullName>
        <label>Binding Instance Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CancellationDate__c</fullName>
        <label>Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ControllerText__c</fullName>
        <label>Controller</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CurrencyIsoCode__c</fullName>
        <label>Currency Iso Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveNextBillingDate__c</fullName>
        <label>Effective Next Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Billing Schedule Group Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LegalEntityId__c</fullName>
        <label>Legal Entity</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NextBillingOverrideDate__c</fullName>
        <label>Next Billing Override Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__PaymentTermId__c</fullName>
        <label>Payment Term</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PeriodBoundaryText__c</fullName>
        <label>Period Boundary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductId__c</fullName>
        <label>Product Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProrationPolicyId__c</fullName>
        <label>Proration Policy</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShippingAddressText__c</fullName>
        <label>Shipping Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__TaxTreatmentId__c</fullName>
        <label>Tax Treatment</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TotalBilledAmount__c</fullName>
        <label>Total Billed amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalPendingAmount__c</fullName>
        <label>Total pending amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__UnitOfMeasureId__c</fullName>
        <label>Unit Of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
</CustomObject>